--- a/note/NodeJS基础入门/从开始写起.md
+++ b/note/NodeJS基础入门/从开始写起.md
@@ -1,5 +1,6 @@
 ## 从开始写起…
 先抛开其他的,从最基本的开始!
+
 暂时忘记我们的jQuery,Vue,Angular,React,BackBone…
 Node面世已经很多年了,虽然不比Java,Php这些老牌子,但是最近崛起的这几年,身为一名前端从业人员,如果你还不知道什么是Node,那也许,你真的out了;
 
@@ -28,6 +29,10 @@ console.log(`${str1}${str2}`)
 node test.js
 ```
 仔细看看命令行界面,是否输出了Hello Node这一串字符!如果没有,请检查是否自动配置了NodeJs的环境变量;
+
+*注:当然,你也可以直接Shift+右键呼出命令行界面,直接输入node并回车,进入node命令格式,而后跟随光标,输入你熟悉的JavaScript代码,看看是否都能被解析执行!~*
+
+
 
 ---
 * NodeJS是否只能以这种命令行形式出现,太麻烦了!!
