--- a/note/NodeJS基础入门/从开始写起.md
+++ b/note/NodeJS基础入门/从开始写起.md
@@ -42,3 +42,6 @@ node test.js
 * 太简单的东西没有挑战性!我们需要高大上的技能!!
 
     **好的,没问题,接下来我们就正式开启NodeJS之旅!请大家坐稳,老司机开始飙车**
+
+
+[下一节:最Low的Node应用](./最Low的Node应用.md)
