--- a/note/NodeJS基础入门/从开始写起.md
+++ b/note/NodeJS基础入门/从开始写起.md
@@ -1,47 +1,49 @@
 ## 从开始写起…
+
 先抛开其他的,从最基本的开始!
 
-暂时忘记我们的jQuery,Vue,Angular,React,BackBone…
-Node面世已经很多年了,虽然不比Java,Php这些老牌子,但是最近崛起的这几年,身为一名前端从业人员,如果你还不知道什么是Node,那也许,你真的out了;
+暂时忘记我们的 jQuery,Vue,Angular,React,BackBone…
+Node 面世已经很多年了,虽然不比 Java,Php 这些老牌子,但是最近崛起的这几年,身为一名前端从业人员,如果你还不知道什么是 Node,那也许,你真的 out 了;
 
-* 首先,NodeJS是一门跨平台的服务器语言(win,linux,MacOS…);
-* 其次,NodeJS依赖于Chrome的V8引擎,以JavaScript语法为基础,进行代码解释;
-* 最后,NodeJS是单线程,单进程,不适合做CPU密集型的应用,但是因为独特的异步处理机制以及其事件驱动模型,适合做高并发,I/O密集型的应用;
+- 首先,NodeJS 是一门跨平台的服务器语言(win,linux,MacOS…);
+- 其次,NodeJS 依赖于 Chrome 的 V8 引擎,以 JavaScript 语法为基础,进行代码解释;
+- 最后,NodeJS 是单线程,单进程,不适合做 CPU 密集型的应用,但是因为独特的异步处理机制以及其事件驱动模型,适合做高并发,I/O 密集型的应用;
 
-其实我们都知道NodeJS,但是我并没有后端语言基础,想了解NodeJs,但是无从下手,文档API也看不明白?
+其实我们都知道 NodeJS,但是我并没有后端语言基础,想了解 NodeJs,但是无从下手,文档 API 也看不明白?
 
-本人写这个博客的意图就在于,从零开始学习NodeJS,从入门到老鸟,更新可能不快,但是一定会慢慢地与大家一起深入学习完NodeJS;
+本人写这个博客的意图就在于,从零开始学习 NodeJS,从入门到老鸟,更新可能不快,但是一定会慢慢地与大家一起深入学习完 NodeJS;
 
-关于NodeJS的安装这里就不多做赘述了,百度NodeJS官网,下载安装包,下一步点到底即可…相比Java,Php程序员,我们幸福太多…
+关于 NodeJS 的安装这里就不多做赘述了,百度 NodeJS 官网,下载安装包,下一步点到底即可…相比 Java,Php 程序员,我们幸福太多…
 
-### 开始我们的第一个NodeJS程序
+### 开始我们的第一个 NodeJS 程序
 
-得益于伟大的V8引擎,以及JavaScript语法,NodeJS文件的后缀名统一都是.js(当然,现在有更规范的typescript,.ts也是被支持的);
-创建myNode文件夹,新建test.js,码出以下代码,并保存;
+得益于伟大的 V8 引擎,以及 JavaScript 语法,NodeJS 文件的后缀名统一都是.js(当然,现在有更规范的 typescript,.ts 也是被支持的);
+创建 myNode 文件夹,新建 test.js,码出以下代码,并保存;
+
 ```javascript {.line-numbers}
-let str1 = 'Hello';
-let str2 = 'NodeJS';
-console.log(`${str1}${str2}`)
+let str1 = "Hello";
+let str2 = "NodeJS";
+console.log(`${str1}${str2}`);
 ```
 
-区别于以往在浏览器运行js代码的方式,我们运行Node代码将使用命令行执行,在安装完NodeJS之后,应该会自动添加Node和Npm的环境变量,这时,我们就可以在当前myNode文件夹下Shift+右键,打开命令行,输入:
+区别于以往在浏览器运行 js 代码的方式,我们运行 Node 代码将使用命令行执行,在安装完 NodeJS 之后,应该会自动添加 Node 和 Npm 的环境变量,这时,我们就可以在当前 myNode 文件夹下 Shift+右键,打开命令行,输入:
+
 ```bash
 node test.js
 ```
-仔细看看命令行界面,是否输出了Hello Node这一串字符!如果没有,请检查是否自动配置了NodeJs的环境变量;
 
-*注:当然,你也可以直接Shift+右键呼出命令行界面,直接输入node并回车,进入node命令格式,而后跟随光标,输入你熟悉的JavaScript代码,看看是否都能被解析执行!~*
+仔细看看命令行界面,是否输出了 Hello Node 这一串字符!如果没有,请检查是否自动配置了 NodeJs 的环境变量;
 
-
+_注:当然,你也可以直接 Shift+右键呼出命令行界面,直接输入 node 并回车,进入 node 命令格式,而后跟随光标,输入你熟悉的 JavaScript 代码,看看是否都能被解析执行!~_
 
 ---
-* NodeJS是否只能以这种命令行形式出现,太麻烦了!!
 
-    **当然不是,目前有上百种运行Node程序的方案,学到你脑壳痛!~**
+- NodeJS 是否只能以这种命令行形式出现,太麻烦了!!
 
-* 太简单的东西没有挑战性!我们需要高大上的技能!!
+  **当然不是,目前有上百种运行 Node 程序的方案,学到你脑壳痛!~**
 
-    **好的,没问题,接下来我们就正式开启NodeJS之旅!请大家坐稳,老司机开始飙车**
+- 太简单的东西没有挑战性!我们需要高大上的技能!!
 
+  **好的,没问题,接下来我们就正式开启 NodeJS 之旅!请大家坐稳,老司机开始飙车**
 
-[下一节:最Low的Node应用](./最Low的Node应用.md)
+[下一节:最 Low 的 Node 应用](./最Low的Node应用.md)
